# polymorph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODOS.md  blog.md  mcp.example.json  plan.md  project.md
.claude/skills/polymorph/: SKILL.md
.cursor/: mcp.json.example
.github/workflows/: ci.yml
data/: DATA_CARD.md
examples/: tract_probe.rs
ml_pipeline/: .env.example  COMPOSER_TASK.md  README.md  RUNBOOK_OPENROUTER.md  pyproject.toml
ml_pipeline/cloud/: eval_modal.py  train_modal.py
ml_pipeline/configs/: default.yaml  local_fast.yaml  modernbert.yaml
ml_pipeline/polymorph_lamr/: __init__.py  pipeline.py
ml_pipeline/polymorph_lamr/bench/: build_heldout.py  compare.py  judge_bench.py  label_ceiling.py  loghub.py  methods.py  run_bench.py  spandecode.py  stats.py  structural.py  survival.py  triples.py
ml_pipeline/polymorph_lamr/distill/: chunker.py  client.py  normalize.py  prompts.py  providers.py  run_distill.py  sampler.py
ml_pipeline/polymorph_lamr/distill/adapters/: __init__.py  _common.py  alibaba_gpu.py  api_failures.py  cicd_failures.py  cloudtrail_flaws.py  distsys_synth.py  manifest.py  python_tracebacks.py  security_synth.py  servicenow_itsm.py  stage.py  syslog_cremev2.py  win_events.py
ml_pipeline/polymorph_lamr/eval/: evaluate.py
ml_pipeline/polymorph_lamr/export/: to_onnx.py
ml_pipeline/polymorph_lamr/label/: align.py  ast_split.py  hop_decay.py
ml_pipeline/polymorph_lamr/model/: backbone.py  crf.py  head_gate.py  lamr.py  moe_gate.py
ml_pipeline/polymorph_lamr/qc/: filter.py  metrics.py
ml_pipeline/polymorph_lamr/train/: dataset.py  loop.py  loss.py  train.py
ml_pipeline/scripts/: export_dynbatch.py  probe_threshold.py  quantize_int8.py  run_e2e_smoke.sh
ml_pipeline/tests/: test_adapter_alibaba_gpu.py  test_adapter_api_failures.py  test_adapter_cicd_failures.py  test_adapter_cloudtrail_flaws.py  test_adapter_common.py  test_adapter_distsys_synth.py  test_adapter_python_tracebacks.py  test_adapter_security_synth.py  test_adapter_servicenow_itsm.py  test_adapter_stage.py  test_adapter_syslog_cremev2.py  test_adapter_win_events.py  test_align.py  test_ast_split.py  test_backbone.py  test_bench_stats.py  test_bench_survival.py  test_chunker.py  test_crf.py  test_dataset.py  test_distill_smoke.py  test_ensemble.py  test_export_onnx.py  test_filter_report.py  test_hop_decay.py  test_label_ceiling.py  test_loss.py  test_model_shapes.py  test_modernbert_align.py  test_modernbert_backbone.py  test_normalize.py  test_pipeline_cli.py  test_qc_metrics.py  test_run_distill_cli.py  test_sampler.py  test_spandecode.py  test_structural_floor.py  test_train_loop.py
ml_pipeline/tests/fixtures/: sample.md  sample.py
research/: Advanced_Data_Distillation_for_Token_Deletion.md  Context Management Papers Analysis.md  Gated DeltaNet-2 vs Mamba.md  Localized_Log_Token_Compression_Rust_ONNX_CPU.md  MCP Research.md  Real-Time Long-Context Token Classification.md  Tokenizing_Structured_Data_for_Integrity.md  dynamic_budgeting_kv-cache_integration.md  preserving_semantics_in_document_compression.md
scripts/: fetch_datasets.sh  fetch_model.sh
skills/polymorph/: SKILL.md
src/: adapters_common.rs  align.rs  ast.rs  bench.rs  ccr.rs  cli.rs  compress.rs  config.rs  daac.rs  db.rs  dedup.rs  demo.rs  eval_metrics.rs  io_guard.rs  label_ceiling.rs  lamr.rs  lcm.rs  lib.rs  locking.rs  loghub.rs  main.rs  mcp.rs  methods.rs  modernbert.rs  normalize.rs  selftest.rs  spandecode.rs  stats.rs  structural.rs  survival.rs  sweep.rs  tokenizer.rs  tokens.rs  transport.rs  triples.rs
tests/: demo_tests.rs  integration.rs  lcm_conversation_loop.rs  mb_v0_int8.rs  mb_v0_parity.rs  mcp_inproc.rs  mcp_stdio.rs  selftest_runner.rs
tests/fixtures/: mb_v0_forward_parity.json  modernbert_parity.json
