[package]
name = "polymorph-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Polymorph: lossless context compressor MCP server (token-locking pipeline)"
repository = "https://github.com/GaganSD/lulu-polymorph"
readme = "README.md"

[lib]
name = "polymorph"
path = "src/lib.rs"

[[bin]]
name = "polymorph-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
rmcp = { version = "=1.7.0", features = ["server", "client", "transport-io", "macros", "schemars"] }
tiktoken-rs = "0.6"
# Matches tiktoken-rs's own rustc-hash (1.1) so the FxHashMap rank map we hand to
# `CoreBPE::new` (pure-Rust ModernBERT tokenizer) is the exact same type.
rustc-hash = "1.1"
daachorse = "1"
anyhow = "1"
thiserror = "1"
tree-sitter = { version = "0.25", features = ["wasm"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "io-std", "io-util", "sync"] }
once_cell = "1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
rand_chacha = "0.3"
# erfc for the McNemar chi-square survival function (stats.rs); pure Rust, no libc.
libm = "0.2"
# CSV adapters (distill corpus staging) ported from adapters/_common.py.
csv = "1"
uuid = { version = "1", features = ["v4"] }
crossbeam-channel = "0.5"
dirs = "5"
# Pure-Rust ONNX inference for the LaMR pruner. Chosen over `ort` (onnxruntime
# bindings) because `ort` pulls in a native C++ runtime / prebuilt binary, which
# breaks a clean `cargo install` for an OSS compression engine; tract is pure
# Rust with no system deps.
tract-onnx = "0.23"

[dev-dependencies]
pretty_assertions = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "sync", "time"] }

[profile.release]
lto = "thin"
codegen-units = 1
